# matrix-inversion

./: .gitignore  CMakeLists.txt  Matrix.h  README.md  lecture_notes.txt  main.cpp  run.py
tests/: CMakeLists.txt  inMatrix20.txt  main_test.cpp  outMatrix20.txt
